--- a/client/book_order/public/index.html
+++ b/client/book_order/public/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div id="app" class="container"></div>
+  <div id="app" class="container container-fluid"></div>
 </body>
 
 </html>
