--- a/client/book_order/public/index.html
+++ b/client/book_order/public/index.html
@@ -6,13 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css" />
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
   <!-- <script src="script/shared.js"></script> -->
 </head>
 <title>Document</title>
 </head>
 
-<body>
-  <div id="app" class="container container-fluid"></div>
+<body style="background-color: #eee;">
+  <div id="app"></div>
 </body>
 
 </html>
